# cmake-demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.h.in  main.cpp  mlir_opt.cpp  test_dialect.cpp
cmake/: gflags.cmake  gtest.cmake  init.cmake  llvm.cmake
dialect/: 0.mlir  1.mlir  2.mlir  CMakeLists.txt  rewriter.cpp  rewriter.mlir  test.cpp  test.h  test.td  types.cpp  types.h
math/: CMakeLists.txt  add.cpp  add.h  add_test.cpp  sub.cpp  sub.h
print_hello/: CMakeLists.txt  hello_cpu.cpp  hello_cuda.cu  print_hello.h  print_hello.h.gch
string/: CMakeLists.txt  reverse.cpp  reverse.h
test/: CMakeLists.txt  raw_test.cpp
